--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -20,5 +20,22 @@ $negro: black;
 .blog__card--color div {
     .btn {
         color: rgb(255, 255, 255);
-        background-color: brown;}
+        background-color: brown;}}
+
+.gridFooter{
+    overflow-x: hidden;
+    background-color: rgb(236, 188, 188);
 }
+
+/*BACKGROUND*/
+header {
+    background-color: rgb(236, 188, 188);}
+
+.backgroundCarousel {    
+    background-color: rgba(165, 42, 42, 0.637);
+    padding: 1% 10% 1% 10%;
+    margin: 1%;}
+
+
+
+    
