--- a/scss/style.scss
+++ b/scss/style.scss
@@ -324,7 +324,7 @@ body {
             text-align: left;}
 
                    
-        /*GRIDS*/
+        /*GRIDS
 
         .gridFooter {
         display: grid;
@@ -354,8 +354,7 @@ body {
         .footerNews{
             grid-area: footerNews;}
 
-        
-        /*FLEX*/
+        */
         
          
 
@@ -533,7 +532,7 @@ body {
 
         
             
-        /*GRIDS*/
+        /*GRIDS
 
         .gridFooter {
             display: grid;
@@ -559,7 +558,7 @@ body {
                 grid-area: FooterRedes;}
     
             .footerNews{
-                grid-area: footerNews;}
+                grid-area: footerNews;} */
     
             
             /*FLEX*/
