--- a/views/lorem3.html
+++ b/views/lorem3.html
@@ -109,34 +109,16 @@
     <!--FIN CONTENIDO-->
 
     <!--INICIO FOOTER-->
-    <footer >
-        <div class="gridFooter estiloFooter">
-            <div class="gridFooterTitulos1">
-                <h3>contacto</h3>
-            </div>
-            <div class="footerMail">
-                <h5><img src="../assets/img/icon/email.png" alt="" width="15px">bakery@gmail.com</h5>
-                <h5><img src="../assets/img/icon/telefono.png" alt="" width="15px">+54 9 1111111111</h5>
-            </div>
-            <div class="gridFooterTitulos2">
-                <h3>redes sociales</h3>
-            </div>
-            <div class="FooterRedes">
-                <h5><img src="../assets/img/icon/instagram.png" alt="" width="15px">@bakery</h5>
-                <h5><img src="../assets/img/icon/twitter.png" alt="" width="15px">@bakery</h5>
-                <h5><img src="../assets/img/icon/facebook.png" alt="" width="15px">Bakery</h5>
-            </div>
-            <div class="gridFooterTitulos3">
-                <h3>newsletter</h3>
-            </div>
-            <div class="footerNews">
-                <form action="#">
-                    <input type="text" placeholder="E-mail">
-                    <input class="enviar" type="submit" value="ENVIAR">
-                </form>
-            </div>
-        </div>       
+    <footer class="gridFooter">
+        <div class="footer__redes--ubicacion">
+            <img src="../assets/img/icon/facebook.png" alt="" width="30px">
+            <img src="../assets/img/icon/instagram.png" alt="" width="30px">
+            <img src="../assets/img/icon/twitter.png" alt="" width= "30px">
+        </div>
 
+        <div class="footer__copyright--font">
+            <p>Copyright © 2021 Camila Ossola.</p>
+        </div>
     </footer>
     <!--FIN FOOTER-->
 
