--- a/scss/_font.scss
+++ b/scss/_font.scss
@@ -26,8 +26,17 @@ body {
         font-family: cabin;}  
 
     .header__navbar--font {
-        .navbar-brand {font-family: hatton;}
-        a{font-family: playfairDisplay;}}}
+        .navbar-brand {
+            font-family: hatton;}
+        a{
+            font-family: playfairDisplay;}}
+
+    .footer__copyright--font {
+        p {font-family: cabin;
+            font-size: 90%;
+            text-align: center;}
+    }
+    }
 
 
 
