--- a/scss/_ubicacion.scss
+++ b/scss/_ubicacion.scss
@@ -8,4 +8,18 @@
 .blog__texto--color {
     margin: 1% 1% 3% 1%;}
 
-    
+.header__redes--ubicacion {
+    img {
+        display: flex;
+        flex-direction: column;     
+    }
+}
+
+.footer__redes--ubicacion {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    img {
+        margin: 2% 1%;
+    }
+}
