--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -23,8 +23,9 @@ $negro: black;
         background-color: brown;}}
 
 .gridFooter{
-    overflow-x: hidden;
+    margin-top: 2%;
     background-color: rgb(236, 188, 188);
+    padding-bottom: 5%;
 }
 
 /*BACKGROUND*/
@@ -35,7 +36,6 @@ header {
     background-color: rgba(165, 42, 42, 0.637);
     padding: 1% 10% 1% 10%;
     margin: 1%;}
-
 
 
     
