--- a/views/lorem4.html
+++ b/views/lorem4.html
@@ -38,7 +38,7 @@
                                     <a class="nav-link" href="productos.html">Productos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="blog.html">Blog</a>
+                                    <a class="nav-link active" href="blog.html">Blog</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="contacto.html">Contacto</a>
