--- a/views/productos.html
+++ b/views/productos.html
@@ -28,14 +28,14 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
-                                <li class="nav-item active">
+                                <li class="nav-item ">
                                 <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
                                 <a class="nav-link" href="locales.html">Locales</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="productos.html">Productos</a>
+                                    <a class="nav-link active" href="productos.html">Productos</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="blog.html">Blog</a>
