modifique los botones de contacto

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,6 +17,10 @@
   color: white;
   background-color: brown; }
 
+.botonesFlex .btn {
+  color: white;
+  background-color: brown; }
+
 .gridFooter {
   margin-top: 2%;
   background-color: #ecbcbc;
@@ -380,7 +384,7 @@ footer div h3 {
   .botonesFlex {
     display: flex;
     justify-content: center;
-    margin: 2% 2% 10% 2%; }
+    margin: 2% 3% 10% 3%; }
   /*TABLA*/
   .tablaEstilo div {
     font-family: cabin;
