--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -22,11 +22,15 @@ $negro: black;
         color: rgb(255, 255, 255);
         background-color: brown;}}
 
+.botonesFlex {
+    .btn {
+        color: rgb(255, 255, 255);
+        background-color: brown;}}
+
 .gridFooter{
     margin-top: 2%;
     background-color: rgb(236, 188, 188);
-    padding-bottom: 5%;
-}
+    padding-bottom: 5%;}
 
 /*BACKGROUND*/
 header {
