--- a/views/contacto.html
+++ b/views/contacto.html
@@ -85,8 +85,8 @@
                             <div>Quiero suscribirme al newsletter</div>
                         </div>
                         <div class="botonesFlex">
-                            <input type="reset" value="Borrar todo">
-                            <input type="submit" value="Enviar">
+                            <input class="btn btn-primary" type="submit" value="Enviar">
+                            <input class="btn btn-primary" type="reset" value="Borrar todo">
                         </div>       
                     </form>
                 </div>
